test/ui/tests/fail/class-multiple-neon-attrs-const.rs
struct Example;

#[neon::class]
impl Example {
    #[neon(name = "foo")]
    #[neon(json)]
    const VALUE: i32 = 42;
}

fn main() {}
