test/ui/tests/fail/class-multiple-neon-attrs-const.stderr
error: multiple #[neon(...)] attributes on const property are not allowed
 --> tests/fail/class-multiple-neon-attrs-const.rs:6:5
  |
6 |     #[neon(json)]
  |     ^^^^^^^^^^^^^
